force-app/main/default/objects/BTN_Equipment__c/BTN_Equipment__c.object-meta.xml
<CustomObject>
    <label>Equipment</label>
    <nameField>
        <displayFormat>EQ{000000}</displayFormat>
        <label>Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>