force-app/main/default/objects/BTN_Equipment__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Czy sprzęt nie jest zezłomowany lub licencja jest aktywna?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>