force-app/main/default/objects/BTN_Equipment__c/fields/Assignment_Deprecated__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Deprecated__c</fullName>
    <formula>NOT(ISNULL(Contact__r.LastDayAtWork__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Deprecated</label>
    <type>Checkbox</type>
</CustomField>