force-app/main/default/objects/BTN_Equipment__c/fields/Britenet_ID__c.field-meta.xml
<CustomField>
    <fullName>Britenet_ID__c</fullName>
    <externalId>true</externalId>
    <label>Britenet ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>