force-app/main/default/objects/BTN_Equipment__c/fields/BS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>BS_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>BS External Id</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>