force-app/main/default/objects/BTN_Equipment__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <errorMessage>Selected Equipment must be owned by the selected Contact</errorMessage>
        <filterItems>
            <field>BTN_Equipment__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Equipment</value>
        </filterItems>
        <filterItems>
            <field>$Source.Contact__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>BTN_Equipment__c.Contact__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Contact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BTN_Equipment__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>