force-app/main/default/objects/BTN_Equipment__c/fields/Equipment_Request__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Request</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>You can select only an Equipment Request for the selected contact</errorMessage>
        <filterItems>
            <field>$Source.Contact__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>$Source.Contact__c</field>
            <operation>equals</operation>
            <valueField>BTN_Equipment_Request__c.Contact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BTN_Equipment_Request__c</referenceTo>
    <relationshipLabel>Equipment</relationshipLabel>
    <relationshipName>Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>