force-app/main/default/objects/BTN_Equipment__c/fields/License_Name__c.field-meta.xml
<CustomField>
    <fullName>License_Name__c</fullName>
    <label>License Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>