force-app/main/default/objects/BTN_Equipment__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Oem</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Serial</fullName>
            </value>
            <value>
                <fullName>Floating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>