force-app/main/default/objects/BTN_Equipment__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DataCenter</fullName>
            </value>
            <value>
                <fullName>Lublin Hamleta</fullName>
            </value>
            <value>
                <fullName>Kielce IX Wieków</fullName>
            </value>
            <value>
                <fullName>Klient</fullName>
            </value>
            <value>
                <fullName>Lublin Morwowa</fullName>
            </value>
            <value>
                <fullName>Poznań Strzelecka</fullName>
            </value>
            <value>
                <fullName>Warszawa Bukowińska</fullName>
            </value>
            <value>
                <fullName>Warszawa Wołoska</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>