force-app/main/default/objects/BTN_Equipment__c/fields/Phone_Contract__c.field-meta.xml
<CustomField>
    <fullName>Phone_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phone Contract</label>
    <referenceTo>BTN_Phone_Contract__c</referenceTo>
    <relationshipLabel>Equipment</relationshipLabel>
    <relationshipName>Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>