force-app/main/default/objects/BTN_Equipment__c/fields/Reserved__c.field-meta.xml
<CustomField>
    <fullName>Reserved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reserved</label>
    <type>Checkbox</type>
</CustomField>