force-app/main/default/objects/BTN_Equipment__c/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <label>Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Miesięczna</fullName>
            </value>
            <value>
                <fullName>Roczna</fullName>
            </value>
            <value>
                <fullName>Dożywotnia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>