force-app/main/default/objects/BTN_Equipment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Komputer</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Telefon</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Karta SIM</fullName>
            </value>
            <value>
                <fullName>Router</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>Access Point</fullName>
            </value>
            <value>
                <fullName>Licencja</fullName>
            </value>
            <value>
                <fullName>Inne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>