force-app/main/default/objects/BTN_Equipment__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sparx</fullName>
            </value>
            <value>
                <fullName>OVH</fullName>
            </value>
            <value>
                <fullName>Partner Microsoft</fullName>
            </value>
            <value>
                <fullName>Inny</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>