force-app/main/default/objects/BTN_Equipment__c/recordTypes/Equipment.recordType-meta.xml
<RecordType>
    <fullName>Equipment</fullName>
    <active>true</active>
    <description>Sprzęt - komputery, monitory, telefony, tablety, karty SIM, routery, switche, access pointy i inne</description>
    <label>Equipment</label>
</RecordType>