force-app/main/default/objects/BTN_Equipment__c/recordTypes/License.recordType-meta.xml
<RecordType>
    <fullName>License</fullName>
    <active>true</active>
    <description>Licencje</description>
    <label>License</label>
</RecordType>