force-app/main/default/objects/BTN_Equipment__c/recordTypes/Phone_Contract.recordType-meta.xml
<RecordType>
    <fullName>Phone_Contract</fullName>
    <active>true</active>
    <description>Abonament na telefon</description>
    <label>Phone Contract</label>
</RecordType>