force-app/main/default/objects/BTN_Equipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Model__c</columns>
    <columns>License_Name__c</columns>
    <columns>Britenet_ID__c</columns>
    <columns>Contact__c</columns>
    <columns>Company__c</columns>
    <columns>Equipment__c</columns>
    <columns>Location__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>