force-app/main/default/objects/BTN_Equipment__c/listViews/Assigned_Equipment.listView-meta.xml
<ListView>
    <fullName>Assigned_Equipment</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Model__c</columns>
    <columns>License_Name__c</columns>
    <columns>Britenet_ID__c</columns>
    <columns>Contact__c</columns>
    <columns>Company__c</columns>
    <columns>Equipment__c</columns>
    <columns>Location__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Przypisane</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>